[package]
name = "zcrab"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1", features = ["full", "tracing"] }
tracing = "0.1"
tracing-subscriber = {version = "0.3.17", features = ["local-time"]}
tracing-appender = "0.2"
time = {version = "0.3", features = ["macros"] }
parking_lot = "0.12"
smallvec = "1.11"
console-subscriber = "0.1"
